			Java Electric change log

************************* Version 8.00: Released  *************************

IMP: (6/8/04, SMR) Improved "PixelDrawing.java" to align stipple patterns correctly.

IMP: (6/8/04, SMR) Implemented Windows / Messages Window menu with "Save Messages" and "Clear".

IMP: (6/8/04, SMR) Implemented Tools / Routing command "Mimic-Selected".

IMP: (6/8/04, SMR) Implemented Tools / Routing commands "Enable Mimic Stitching" and "Enable Auto Stitching".

IMP: (6/8/04, SMR) Implemented Tools / Spice submenu "Set Spice Model".

IMP: (6/8/04, SMR) Implemented Tools / Verilog submenu "Set Verilog Wire" with commands "Wire", "Trireg" and "Default".

IMP: (6/7/04, SMR) Implemented "View" commands "Edit Multi-Page Schematic View" and "Make Multi-Page Schematic View".

IMP: (6/7/04, SMR) Implemented "Make Grid Just Visible"

IMP: (6/7/04, SMR) Implemented "Match Other Window".

IMP: (6/7/04, SMR) Implemented "Color" tab of "Edit Options" as well as the color commands
     "Black Background Colors", "White Background Colors", and "Restore Default Colors".

IMP: (6/7/04, SMR) Implemented Spice command "Add Multiplier".

IMP: (6/7/04, GVG) Ctrl P for printing. Corrections to M factor code in Spice.java

IMP: (6/6/04, SMR) Implemented "Layer" tab of "Edit Options" dialog.

IMP: (6/6/04, SMR) Implemented "Arrows Filled" option in "Technology" tab of "Edit Options" dialog.

IMP: (6/6/04, SMR) Implemented "Panning Distance" settings.

IMP: (6/6/04, SMR) Implemented "Transistor Strength" setting.

IMP: (6/6/04, SMR) Implemented "List Tools".

IMP: (6/6/04, SMR) Implemented "Get Unrouted Wire".

IMP: (6/6/04, SMR) Reorganized EditWindow so that it is the object used externally,
     not EditWindow.CircuitPart.

IMP: (6/5/04, SMR) Implemented 3D tab of "Edit Options" dialog.

IMP: (6/5/04, SMR) Implemented "Insert jog in arc".

IMP: (6/4/04, GVG) First version of M factor in Spice output.

IMP: (6/4/04, RK) Change fill cell generator so that all reserved